<resources>
    <string name="app_name">Elytra</string>
    <string name="login_fallito">Login fallito</string>
    <string name="dati_inseriti_incorretti">I dati inseriti non sono corretti.</string>
    <string name="okay">Okay</string>
    <string name="errore_connessione">Errore di connessione</string>
    <string name="imposs_connettersi_al_server">
        Impossibile connettersi al server di Elytra, riprova più tardi.
    </string>
    <string name="mail_invalida">Inserisci un indirizzo email valido</string>
    <string name="mail_in_uso">Questo indirizzo email è già in uso</string>
    <string name="pwd_corta">La password deve comprendere tra 6 e 18 caratteri</string>
    <string name="pwd_spaziata">La password non può contenere spazi</string>
    <string name="pwd_invalida">La password deve contenere almeno una lettera maiuscola,
        una lettera minuscola e un numero
    </string>
    <string name="conferma_invalida">Le due password non coincidono</string>
    <string name="data_invalida">Inserisci una data valida</string>
    <string name="data_non_maggiorenne">Devi avere compiuto 18 anni</string>
    <string name="seleziona_sesso">Seleziona il tuo sesso</string>
    <string name="domanda_sicurezza">Domanda di sicurezza</string>
    <string name="conferma">Conferma</string>
    <string name="annulla">Annulla</string>
    <string name="risposta_errata">Risposta errata</string>
    <string name="inserisci_risposta">Inserisci una risposta</string>
    <string name="reimposta_password">Reimposta password</string>
    <string name="password_reimpostata">Password reimpostata</string>
    <string name="password_reset_conferma">La tua password è stata reimpostata correttamente.</string>
    <string name="inserisci_email">Inserisci indirizzo email</string>
    <string name="password_dimenticata">Password dimenticata</string>
    <string name="email_non_associata_msg">Inserisci un indirizzo email associato ad un account</string>
    <string name="password">Password</string>
    <string name="no_account_string">Non hai un account?</string>
    <string name="register">Registrati</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="nome_cognome">Nome e cognome</string>
    <string name="confirm_password">Conferma password</string>
    <string name="data_nascita">Data di nascita</string>
    <string name="risposta">Risposta</string>
    <string name="profile">profile</string>
    <string name="discover">Discover</string>
    <string name="voli">Voli</string>
    <string name="prenotazioni">Prenotazioni</string>
    <string name="imposs_connettersi_al_server_torna_al_login">
        Impossibile connettersi al server di Elytra, effettua nuovamente il login o riprova più tardi.
    </string>
    <string name="non_ora">Non ora</string>
    <string name="avatar_impostato">Avatar impostato</string>
    <string name="immagine_impostata">La tua immagine del profile è stata impostata correttamente.</string>
    <string name="seleziona_aeroporto">Seleziona un aeroporto</string>
    <string name="dest_part_coincidono">Destinazione e partenza coincidono</string>
    <string name="inserisci_data_futura">Inserisci una data nel futuro</string>
    <string name="economy">Economy</string>
    <string name="business">Business</string>
    <string name="prima_classe">Prima classe</string>
    <string name="compagnie">Compagnie</string>
    <string name="andata_e_ritorno">Andata e ritorno</string>
    <string name="sola_andata">Sola andata</string>
    <string name="prezzo_str">€%1$.2f</string>
    <string name="passegeri_str">%1$d passegeri</string>
    <string name="volo_di_andata">Volo di andata</string>
    <string name="volo_di_ritorno">Volo di ritorno</string>
    <string name="passegero_n">Passegero %1$d</string>
    <string name="prossimo_passegero">Prossimo passeggero</string>
    <string name="procedi_al_pagamento">Procedi al pagamento</string>
    <string name="profile_title">Profile</string>
    <string name="logout">Logout</string>
    <string name="modifica_email">Modifica email</string>
    <string name="password_non_corretta">La password inserita non è corretta</string>
    <string name="indirizzo_email_modificato">Indirizzo email modificato</string>
    <string name="indirizzo_mail_modificato_to_login">Il tuo indirizzo email è stato modificato correttamente. Rieffettua il login per continuare in Elytra.</string>
    <string name="password_incorretta">La password inserita non è corretta</string>
    <string name="password_modificata_to_login">La tua password è stata modificata correttamente. Rieffettua il login per continuare in Elytra.</string>
    <string name="password_modificata">Password modificata</string>
    <string name="nuovo_metodo_di_pagamento">Nuovo metodo di pagamento</string>
    <string name="circuito_non_supportato">Questo circuito non è supportato</string>
    <string name="carta_scaduta">Questa carta è scaduta</string>
    <string name="inserisci_nome_intestatario">Inserisci il nome dell\'intestatario</string>
    <string name="inserisci_num_carta_valido">Inserisci un numero di carta valido</string>
    <string name="metodo_di_pagamento_aggiunto">Metodo di pagamento aggiunto</string>
    <string name="carta_associata_profilo">La tua carta è stata associata correttamente al tuo profilo.</string>
    <string name="logout_title">Logout</string>
    <string name="sicuro_del_logout">Sei sicuro di voler effettuare il logout?</string>
    <string name="pagamento_in_corso">Pagamento in corso</string>
    <string name="pagamento_effettuato">Pagamento effettuato</string>
    <string name="importo_saldato_correttamente">L\'importo è stato saldato correttamente. Troverai i tuoi biglietti nella sezione prenotazioni.</string>
    <string name="alloggi">Alloggi</string>
    <string name="range_date_str">%1$s - %2$s</string>
    <string name="una_stella_o_piu">Una stella o più</string>
    <string name="stelle_o_piu">%1$d stelle o più</string>
    <string name="cinque_stelle">Cinque stelle</string>
    <string name="inserisci_citta_valida">Inserisci una città valida</string>
    <string name="seleziona_periodo">Seleziona il periodo di permanenza</string>
    <string name="nuova_email">Nuova email</string>
    <string name="vecchia_password">Vecchia password</string>
    <string name="nuova_password">Nuova password</string>
    <string name="conferma_new_password">Conferma nuova password</string>
    <string name="numero_carta">Numero di carta</string>
    <string name="immagine_circuito">Immagine circuito</string>
    <string name="scadenza">Scadenza</string>
    <string name="codice_carta">CVV/CVC</string>
    <string name="intestatario">Intestatario carta</string>
    <string name="immagine_profilo">Immagine profilo</string>
    <string name="nome_e_cognome">Nome e cognome</string>
    <string name="sesso">Sesso</string>
    <string name="data_base">01/01/1970</string>
    <string name="tuoi_dati">I tuoi dati</string>
    <string name="add_mtd_pagamento">Aggiungi un metodo di pagamento</string>
    <string name="tuoi_pagamenti">I tuoi metodi di pagamento</string>
    <string name="partenza">Partenza</string>
    <string name="destinazione">Destinazione</string>
    <string name="andata">Andata il</string>
    <string name="ritorno">Ritorno il</string>
    <string name="passeggeri">Passeggeri</string>
    <string name="cerca_voli">Cerca voli</string>
    <string name="modifica">Modifica</string>
    <string name="volo_ritorno">Seleziona il volo di ritorno</string>
    <string name="volo_andata">Il tuo volo di andata</string>
    <string name="seleziona_volo">Seleziona volo</string>
    <string name="decollo_alle">Decollo alle</string>
    <string name="acquistato_il">Acquistato il</string>
    <string name="gate_chiude_alle">Il gate chiude alle</string>
    <string name="personalizza">Personalizza</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="incluso">Già incluso</string>
    <string name="riepilogo">Riepilogo</string>
    <string name="totale">Totale</string>
    <string name="seleziona_citta">Seleziona città</string>
    <string name="cerca_alloggi">Cerca alloggi</string>
    <string name="campeggi">Campeggi</string>
    <string name="appartamenti">Appartamenti</string>
    <string name="ostelli">Ostelli</string>
    <string name="hotel">Hotel</string>
    <string name="persone">Persone</string>
    <string name="periodo_permanenza">Seleziona periodo di permanenza</string>
    <string name="seleziona_un_alloggio">Seleziona un alloggio</string>
    <string name="alloggi_disponibili">Alloggi disponibili</string>
    <string name="destinazioni_piu_visitate">Le destinazioni più visitate</string>
    <string name="benvenuto_in">Benvenuto in</string>
    <string name="elytra">"  ELYTRA"</string>
    <string name="registrati">Registrati</string>
    <string name="uomo">Uomo</string>
    <string name="donna">Donna</string>
    <string name="altro">Altro</string>
    <string name="scegli_una_domanda_di_sicurezza">Scegli una domanda di sicurezza</string>
    <string name="nessun_volo_trovato">Nessun volo trovato</string>
    <string name="nessun_volo_con_caratteristiche_desiderate">Purtroppo, non è attualmente disponibile nessun volo con le caratteristiche desiderate.</string>
    <string name="nessun_alloggio_trovato">Nessun alloggio trovato</string>
    <string name="nessun_alloggio_con_caratteristiche_desiderate">Purtroppo, non è attualmente disponibile nessun alloggio con le caratteristiche desiderate.</string>
    <string name="importo_totale">Importo totale</string>
    <string name="commissioni">Commissioni</string>
    <string name="da_pagare">Da pagare</string>
    <string name="seleziona_metodo_di_pagamento">Seleziona metodo di pagamento</string>
</resources>