<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".accomodations.SearchAccomodationsFragment">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/cityText"
        style="@style/Widget.Material3.TextInputLayout.FilledBox.Dense.ExposedDropdownMenu"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        app:errorEnabled="true"
        android:hint="@string/seleziona_citta"
        app:errorIconDrawable="@null"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.MaterialAutoCompleteTextView
            android:id="@+id/materialAutoComplete"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text|textCapWords" />
    </com.google.android.material.textfield.TextInputLayout>

    <ProgressBar
        android:id="@+id/cityFetchProgress"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:indeterminate="true"
        app:layout_constraintEnd_toEndOf="@+id/cityText"
        app:layout_constraintStart_toStartOf="@+id/cityText"
        app:layout_constraintTop_toBottomOf="@+id/cityText" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/dateRangeText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:endIconDrawable="@drawable/ic_calendar_24"
        app:endIconMode="custom"
        app:errorEnabled="true"
        android:hint="@string/periodo_permanenza"
        app:errorIconDrawable="@null"
        app:layout_constraintEnd_toEndOf="@id/cityText"
        app:layout_constraintStart_toStartOf="@id/cityText"
        app:layout_constraintTop_toBottomOf="@+id/cityFetchProgress">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/datePickerRange"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="false"
            android:inputType="datetime|date" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/hostCountText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:hint="@string/persone"
        android:maxWidth="100dp"
        android:minWidth="80dp"
        app:errorEnabled="true"
        app:errorIconDrawable="@null"
        app:layout_constraintEnd_toEndOf="@id/dateRangeText"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/ratingBar"
        app:layout_constraintTop_toBottomOf="@+id/dateRangeText">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/numPersone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:maxLength="1" />
    </com.google.android.material.textfield.TextInputLayout>

    <RatingBar
        android:id="@+id/ratingBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:numStars="5"
        android:stepSize="1"
        app:layout_constraintStart_toStartOf="@+id/dateRangeText"
        app:layout_constraintTop_toTopOf="@+id/hostCountText" />

    <TextView
        android:id="@+id/ratingText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@+id/ratingBar"
        app:layout_constraintTop_toBottomOf="@+id/ratingBar" />

    <com.google.android.material.chip.ChipGroup
        android:id="@+id/categoryChips"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="@+id/dateRangeText"
        app:layout_constraintStart_toStartOf="@+id/dateRangeText"
        app:layout_constraintTop_toBottomOf="@+id/ratingText">

        <com.google.android.material.chip.Chip
            android:id="@+id/hotelChip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checkable="true"
            android:text="@string/hotel" />

        <com.google.android.material.chip.Chip
            android:id="@+id/hostelChip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checkable="true"
            android:text="@string/ostelli" />

        <com.google.android.material.chip.Chip
            android:id="@+id/apartmentChip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checkable="true"
            android:text="@string/appartamenti" />

        <com.google.android.material.chip.Chip
            android:id="@+id/campingChip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checkable="true"
            android:text="@string/campeggi" />
    </com.google.android.material.chip.ChipGroup>

    <com.google.android.material.slider.RangeSlider
        android:id="@+id/priceSlider"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:stepSize="10.0"
        android:valueFrom="0.0"
        android:valueTo="700.0"
        app:labelBehavior="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/categoryChips"
        app:values="@array/price_slider_init" />

    <Button
        android:id="@+id/searchAccomodationsBttn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/cerca_alloggi"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/priceSlider"
        app:layout_constraintVertical_bias="0.0" />
</androidx.constraintlayout.widget.ConstraintLayout>